update worked on about page

--- a/gallery.html
+++ b/gallery.html
@@ -8,11 +8,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="header">
-        <h1 class="text-center">
+    <header class="header">
+        <img src="ufxlogo.png" height="100px" style="border:solid 1px">
+        <h1>
             UrbanFX Photography
         </h1>
-    </div>
+        <button type="button" class="btn btn-success">Book Now</button>
+       </header>
     <nav class="navbar bg-body-tertiary" id="navbar">
         <form class="container-fluid justify-content-start">
             <a href="index.html">
