--- a/about.html
+++ b/about.html
@@ -1,31 +1,106 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <div class="header">
-        <h1 class="text-center">
-            UrbanFX Photography
-        </h1>
-    </div>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <header class="header">
+      <img src="ufxlogo.png" height="100px" style="border: solid 1px" />
+      <h1>UrbanFX Photography</h1>
+      <button type="button" class="btn btn-success">Book Now</button>
+    </header>
     <nav class="navbar bg-body-tertiary">
-        <form class="container-fluid justify-content-start">
-            <a href="index.html">
-          <button class="btn btn-sm btn-outline-secondary" type="button">Home</button>
+      <form class="container-fluid justify-content-start">
+        <a href="index.html">
+          <button class="btn btn-sm btn-outline-secondary" type="button">
+            Home
+          </button>
         </a>
         <a href="about.html">
-        <button class="btn btn-outline-success me-2" type="button">About</button>
+          <button class="btn btn-outline-success me-2" type="button">
+            About
+          </button>
         </a>
         <a href="gallery.html">
-          <button class="btn btn-sm btn-outline-secondary" type="button">Gallery</button>
-          </a>
-        </form>
-      </nav>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>    
-</body>
+          <button class="btn btn-sm btn-outline-secondary" type="button">
+            Gallery
+          </button>
+        </a>
+      </form>
+    </nav>
+    <div class="text-center">
+      <h2>About UrbanFX Photography</h2>
+    </div>
+    <br><br><br><br><br>
+    <div class="text-center row">
+      <div class="col">
+        <img src="photographer.jpg" height="250px" />
+      </div>
+      <div class="col">
+        <img src="ufxlogo.png" height="250px" />
+      </div>
+      <div class="col">
+        <img src="photographertwo.jpg" height="250px" />
+      </div>
+    </div>
+    <div>
+      <br /><br /><br /><br /><br />
+      <p>
+        At UrbanFX Photography, we believe in capturing the essence of every
+        moment with creativity and precision. As a dynamic sibling duo,
+        Alexander and Alyssa Hamilton are passionate about transforming your
+        special moments into stunning visual stories. Whether you're a seasoned
+        model or new to the camera, we're here to guide you through every step,
+        ensuring you feel comfortable and confident. Our approach is
+        unique—while we excel at delivering classic, posed photos, we also
+        specialize in off-guard and candid shots that truly capture the magic of
+        the moment. Our goal is to create images that are not just professional
+        but also personal, standing out from the ordinary. Ready to create
+        unforgettable memories? Book your session with UrbanFX Photography today
+        and let us capture your story in a way only we can! Contact Us Now and
+        start your journey towards stunning, unique photography.
+      </p>
+    </div>
+    <div class="text-center" style="margin-top: 100px">
+      <h2>Our Services</h2>
+    </div>
+    <div class="list-group text-center">
+      <a
+        href="#" class="list-group-item list-group-item-action"
+      >
+        Headshots
+      </a>
+      <a href="#" class="list-group-item list-group-item-action"
+        >Portrait</a
+      >
+      <a href="#" class="list-group-item list-group-item-action"
+        >Prom</a
+      >
+      <a href="#" class="list-group-item list-group-item-action"
+        >Senior</a
+      >
+      <a
+        class="list-group-item list-group-item-action"
+        >Children</a
+      >
+      <a
+        class="list-group-item list-group-item-action"
+        >Event</a
+      >
+    </div>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
