--- a/index.html
+++ b/index.html
@@ -1,47 +1,145 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    
-    <div class="header">
-        <h1 class="text-center">
-            UrbanFX Photography
-        </h1>
-    </div>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+   <header class="header">
+    <img src="ufxlogo.png" height="100px" style="border:solid 1px">
+    <h1>
+        UrbanFX Photography
+    </h1>
+    <button type="button" class="btn btn-success">Book Now</button>
+   </header>
     <nav class="navbar bg-body-tertiary">
-        <form class="container-fluid justify-content-start">
-            <a href="index.html">
-          <button class="btn btn-outline-success me-2" type="button">Home</button>
+      <form class="container-fluid justify-content-start">
+        <a href="index.html">
+          <button class="btn btn-outline-success me-2" type="button">
+            Home
+          </button>
         </a>
         <a href="about.html">
-        <button class="btn btn-sm btn-outline-secondary" type="button">About</button>
+          <button class="btn btn-sm btn-outline-secondary" type="button">
+            About
+          </button>
         </a>
         <a href="gallery.html">
-          <button class="btn btn-sm btn-outline-secondary" type="button">Gallery</button>
-          </a>
-        </form>
-      </nav>
-      <div class="video-container">
-        <video autoplay loop muted plays-inline source src="ufx.mov" type="video/mp4"></video>
+          <button class="btn btn-sm btn-outline-secondary" type="button">
+            Gallery
+          </button>
+        </a>
+      </form>
+    </nav>
+    <div class="video-container">
+      <video
+        autoplay
+        loop
+        muted
+        plays-inline
+        source
+        src="ufx.mov"
+        type="video/mp4"
+      ></video>
     </div>
-      <div class="text-center">
-        <h2>Welcome</h2>
-        <p>
-            At UrbanFX Photography, we believe in capturing the essence of every moment with creativity and precision. As a dynamic sibling duo, Alexander and Alyssa Hamilton are passionate about transforming your special moments into stunning visual stories. Whether you're a seasoned model or new to the camera, we're here to guide you through every step, ensuring you feel comfortable and confident.
-
-            Our approach is unique—while we excel at delivering classic, posed photos, we also specialize in off-guard and candid shots that truly capture the magic of the moment. Our goal is to create images that are not just professional but also personal, standing out from the ordinary.
-            Ready to create unforgettable memories?  Book your session with UrbanFX Photography today and let us capture your story in a way only we can!  Contact Us Now and start your journey towards stunning, unique photography.
-        </p>
+    <div class="text-center">
+      <h2>Welcome</h2>
+      <p>
+        At UrbanFX Photography, we believe in capturing the essence of every
+        moment with creativity and precision. As a dynamic sibling duo,
+        Alexander and Alyssa Hamilton are passionate about transforming your
+        special moments into stunning visual stories. Whether you're a seasoned
+        model or new to the camera, we're here to guide you through every step,
+        ensuring you feel comfortable and confident. Our approach is
+        unique—while we excel at delivering classic, posed photos, we also
+        specialize in off-guard and candid shots that truly capture the magic of
+        the moment. Our goal is to create images that are not just professional
+        but also personal, standing out from the ordinary. Ready to create
+        unforgettable memories? Book your session with UrbanFX Photography today
+        and let us capture your story in a way only we can! Contact Us Now and
+        start your journey towards stunning, unique photography.
+      </p>
+    </div>
+    <br /><br /><br /><br />
+    <div class="container">
+      <div class="row">
+        <div class="col" style="margin: 5px">
+          <div class="card text-center col" style="width: 18rem">
+            <img src="headshot.jpg" class="card-img-top" alt="#" />
+            <div class="card-body">
+              <h5 class="card-title">Headshots</h5>
+              <p class="card-text">View Headshots</p>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+          </div>
+        </div>
+        <div class="col" style="margin: 5px">
+          <div class="card text-center col" style="width: 18rem">
+            <img src="portrait.jpeg" class="card-img-top" alt="#" />
+            <div class="card-body">
+              <h5 class="card-title">Portrait</h5>
+              <p class="card-text">View Portraits</p>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+          </div>
+        </div>
+        <div class="col" style="margin: 5px">
+          <div class="card text-center col" style="width: 18rem">
+            <img src="prom.jpg" class="card-img-top" alt="#" />
+            <div class="card-body">
+              <h5 class="card-title">Prom</h5>
+              <p class="card-text">Input text here</p>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+          </div>
+        </div>
       </div>
-      <div class="container">
-
+      <div class="row">
+        <div class="col" style="margin: 5px">
+          <div class="card text-center col" style="width: 18rem">
+            <img src="senior.jpeg" class="card-img-top" alt="#" />
+            <div class="card-body">
+              <h5 class="card-title">Senior</h5>
+              <p class="card-text">Input text here</p>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+          </div>
+        </div>
+        <div class="col" style="margin: 5px">
+          <div class="card text-center col" style="width: 18rem">
+            <img src="family.jpeg" class="card-img-top" alt="#" />
+            <div class="card-body">
+              <h5 class="card-title">Family</h5>
+              <p class="card-text">Input text here</p>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+          </div>
+        </div>
+        <div class="col" style="margin: 5px">
+          <div class="card text-center col" style="width: 18rem">
+            <img src="event.jpg" class="card-img-top" alt="#" />
+            <div class="card-body">
+              <h5 class="card-title">Event</h5>
+              <p class="card-text">Input text here</p>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+          </div>
+        </div>
       </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>    
-</body>
+    </div>
+
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
