updated readme file

--- a/about.html
+++ b/about.html
@@ -40,7 +40,7 @@
     <div class="text-center">
       <h2>About UrbanFX Photography</h2>
     </div>
-    <br><br><br><br><br>
+    <br /><br /><br /><br /><br />
     <div class="text-center row">
       <div class="col">
         <img src="photographer.jpg" height="250px" />
@@ -74,28 +74,12 @@
       <h2>Our Services</h2>
     </div>
     <div class="list-group text-center">
-      <a
-        href="#" class="list-group-item list-group-item-action"
-      >
-        Headshots
-      </a>
-      <a href="#" class="list-group-item list-group-item-action"
-        >Portrait</a
-      >
-      <a href="#" class="list-group-item list-group-item-action"
-        >Prom</a
-      >
-      <a href="#" class="list-group-item list-group-item-action"
-        >Senior</a
-      >
-      <a
-        class="list-group-item list-group-item-action"
-        >Children</a
-      >
-      <a
-        class="list-group-item list-group-item-action"
-        >Event</a
-      >
+      <a href="#" class="list-group-item list-group-item-action"> Headshots </a>
+      <a href="#" class="list-group-item list-group-item-action">Portrait</a>
+      <a href="#" class="list-group-item list-group-item-action">Prom</a>
+      <a href="#" class="list-group-item list-group-item-action">Senior</a>
+      <a href="#" class="list-group-item list-group-item-action">Children</a>
+      <a href="#" class="list-group-item list-group-item-action">Event</a>
     </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
