--- a/about.html
+++ b/about.html
@@ -43,13 +43,13 @@
     <br /><br /><br /><br /><br />
     <div class="text-center row">
       <div class="col">
-        <img src="photographer.jpg" height="250px" />
+        <img src="photographer.jpg" height="250px" class="photoFrame" />
       </div>
       <div class="col">
         <img src="ufxlogo.png" height="250px" />
       </div>
       <div class="col">
-        <img src="photographertwo.jpg" height="250px" />
+        <img src="photographertwo.jpg" height="250px" class="photoFrame" />
       </div>
     </div>
     <div>
@@ -74,12 +74,43 @@
       <h2>Our Services</h2>
     </div>
     <div class="list-group text-center">
-      <a href="#" class="list-group-item list-group-item-action"> Headshots </a>
-      <a href="#" class="list-group-item list-group-item-action">Portrait</a>
-      <a href="#" class="list-group-item list-group-item-action">Prom</a>
-      <a href="#" class="list-group-item list-group-item-action">Senior</a>
-      <a href="#" class="list-group-item list-group-item-action">Children</a>
-      <a href="#" class="list-group-item list-group-item-action">Event</a>
+      <a
+        href="#"
+        class="list-group-item list-group-item-action"
+        style="background-color: gold"
+      >
+        Headshots
+      </a>
+      <a
+        href="#"
+        class="list-group-item list-group-item-action"
+        style="background-color: gold"
+        >Portrait</a
+      >
+      <a
+        href="#"
+        class="list-group-item list-group-item-action"
+        style="background-color: gold"
+        >Prom</a
+      >
+      <a
+        href="#"
+        class="list-group-item list-group-item-action"
+        style="background-color: gold"
+        >Senior</a
+      >
+      <a
+        href="#"
+        class="list-group-item list-group-item-action"
+        style="background-color: gold"
+        >Children</a
+      >
+      <a
+        href="#"
+        class="list-group-item list-group-item-action"
+        style="background-color: gold"
+        >Event</a
+      >
     </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
