--- a/gallery.html
+++ b/gallery.html
@@ -1,33 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
     <header class="header">
-        <img src="ufxlogo.png" height="100px" style="border:solid 1px">
-        <h1>
-            UrbanFX Photography
-        </h1>
-        <button type="button" class="btn btn-success">Book Now</button>
-       </header>
+      <img src="ufxlogo.png" height="100px" style="border: solid 1px" />
+      <h1>UrbanFX Photography</h1>
+      <button type="button" class="btn btn-success">Book Now</button>
+    </header>
     <nav class="navbar bg-body-tertiary" id="navbar">
-        <form class="container-fluid justify-content-start">
-            <a href="index.html">
-          <button class="btn btn-sm btn-outline-secondary" type="button">Home</button>
+      <form class="container-fluid justify-content-start">
+        <a href="index.html">
+          <button class="btn btn-sm btn-outline-secondary" type="button">
+            Home
+          </button>
         </a>
         <a href="about.html">
-        <button class="btn btn-sm btn-outline-secondary" type="button">About</button>
+          <button class="btn btn-sm btn-outline-secondary" type="button">
+            About
+          </button>
         </a>
         <a href="gallery.html">
-          <button class="btn btn-outline-success me-2" type="button">Gallery</button>
-          </a>
-        </form>
-      </nav>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>    
-</body>
+          <button class="btn btn-outline-success me-2" type="button">
+            Gallery
+          </button>
+        </a>
+      </form>
+    </nav>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
