--- a/index.html
+++ b/index.html
@@ -13,13 +13,11 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-   <header class="header">
-    <img src="ufxlogo.png" height="100px" style="border:solid 1px">
-    <h1>
-        UrbanFX Photography
-    </h1>
-    <button type="button" class="btn btn-success">Book Now</button>
-   </header>
+    <header class="header">
+      <img src="ufxlogo.png" height="100px" style="border: solid 1px" />
+      <h1>UrbanFX Photography</h1>
+      <button type="button" class="btn btn-success">Book Now</button>
+    </header>
     <nav class="navbar bg-body-tertiary">
       <form class="container-fluid justify-content-start">
         <a href="index.html">
@@ -39,7 +37,7 @@
         </a>
       </form>
     </nav>
-    <div class="video-container">
+    <div class="video-container" style="border: groove grey 20px">
       <video
         autoplay
         loop
@@ -73,31 +71,31 @@
       <div class="row">
         <div class="col" style="margin: 5px">
           <div class="card text-center col" style="width: 18rem">
-            <img src="headshot.jpg" class="card-img-top" alt="#" />
+            <img src="headshot.jpg" class="card-img-top photoFrame" alt="#" />
             <div class="card-body">
               <h5 class="card-title">Headshots</h5>
               <p class="card-text">View Headshots</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <a href="#" class="btn btn-primary">View Headshots</a>
             </div>
           </div>
         </div>
         <div class="col" style="margin: 5px">
           <div class="card text-center col" style="width: 18rem">
-            <img src="portrait.jpeg" class="card-img-top" alt="#" />
+            <img src="portrait.jpeg" class="card-img-top photoFrame" alt="#" />
             <div class="card-body">
               <h5 class="card-title">Portrait</h5>
               <p class="card-text">View Portraits</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <a href="#" class="btn btn-primary">View Portraits</a>
             </div>
           </div>
         </div>
         <div class="col" style="margin: 5px">
           <div class="card text-center col" style="width: 18rem">
-            <img src="prom.jpg" class="card-img-top" alt="#" />
+            <img src="prom.jpg" class="card-img-top photoFrame" alt="#" />
             <div class="card-body">
               <h5 class="card-title">Prom</h5>
               <p class="card-text">Input text here</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <a href="#" class="btn btn-primary">View Proms</a>
             </div>
           </div>
         </div>
@@ -105,31 +103,31 @@
       <div class="row">
         <div class="col" style="margin: 5px">
           <div class="card text-center col" style="width: 18rem">
-            <img src="senior.jpeg" class="card-img-top" alt="#" />
+            <img src="senior.jpeg" class="card-img-top photoFrame" alt="#" />
             <div class="card-body">
               <h5 class="card-title">Senior</h5>
               <p class="card-text">Input text here</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <a href="#" class="btn btn-primary">View Seniors</a>
             </div>
           </div>
         </div>
         <div class="col" style="margin: 5px">
           <div class="card text-center col" style="width: 18rem">
-            <img src="family.jpeg" class="card-img-top" alt="#" />
+            <img src="family.jpeg" class="card-img-top photoFrame" alt="#" />
             <div class="card-body">
               <h5 class="card-title">Family</h5>
               <p class="card-text">Input text here</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <a href="#" class="btn btn-primary">View Family</a>
             </div>
           </div>
         </div>
         <div class="col" style="margin: 5px">
           <div class="card text-center col" style="width: 18rem">
-            <img src="event.jpg" class="card-img-top" alt="#" />
+            <img src="event.jpg" class="card-img-top photoFrame" alt="#" />
             <div class="card-body">
               <h5 class="card-title">Event</h5>
-              <p class="card-text">Input text here</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <p class="card-text">View Event</p>
+              <a href="#" class="btn btn-primary">View Event</a>
             </div>
           </div>
         </div>
