--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <button type="button" class="btn btn-success">Book Now</button>
     </header>
     <nav class="navbar bg-body-tertiary">
-      <form class="container-fluid justify-content-start">
+      <form class="container-fluid justify-content-center">
         <a href="index.html">
           <button class="btn btn-outline-success me-2" type="button">
             Home
@@ -133,6 +133,7 @@
         </div>
       </div>
     </div>
+
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
