update added padding to images and updated roadmap on readme file

--- a/about.html
+++ b/about.html
@@ -14,12 +14,12 @@
   </head>
   <body>
     <header class="header">
-      <img src="ufxlogo.png" height="100px" style="border: solid 1px" />
+      <img src="img/ufxlogo.png" height="100px" style="border: solid 1px" />
       <h1>UrbanFX Photography</h1>
       <button type="button" class="btn btn-success">Book Now</button>
     </header>
     <nav class="navbar bg-body-tertiary">
-      <form class="container-fluid justify-content-start">
+      <form class="container-fluid justify-content-center">
         <a href="index.html">
           <button class="btn btn-sm btn-outline-secondary" type="button">
             Home
@@ -43,18 +43,18 @@
     <br /><br /><br /><br /><br />
     <div class="text-center row">
       <div class="col">
-        <img src="photographer.jpg" height="250px" class="photoFrame" />
+        <img src="img/photographer.jpg" height="250px" class="photoFrame" />
       </div>
       <div class="col">
-        <img src="ufxlogo.png" height="250px" />
+        <img src="img/ufxlogo.png" height="250px" />
       </div>
       <div class="col">
-        <img src="photographertwo.jpg" height="250px" class="photoFrame" />
+        <img src="img/photographertwo.jpg" height="250px" class="photoFrame" />
       </div>
     </div>
     <div>
       <br /><br /><br /><br /><br />
-      <p>
+      <p class="text-center">
         At UrbanFX Photography, we believe in capturing the essence of every
         moment with creativity and precision. As a dynamic sibling duo,
         Alexander and Alyssa Hamilton are passionate about transforming your
