--- a/gallery.html
+++ b/gallery.html
@@ -19,7 +19,7 @@
       <button type="button" class="btn btn-success">Book Now</button>
     </header>
     <nav class="navbar bg-body-tertiary" id="navbar">
-      <form class="container-fluid justify-content-start">
+      <form class="container-fluid justify-content-center">
         <a href="index.html">
           <button class="btn btn-sm btn-outline-secondary" type="button">
             Home
