--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <header class="header">
-      <img src="ufxlogo.png" height="100px" style="border: solid 1px" />
+      <img src="img/ufxlogo.png" height="100px" style="border: solid 1px" />
       <h1>UrbanFX Photography</h1>
       <button type="button" class="btn btn-success">Book Now</button>
     </header>
@@ -71,7 +71,7 @@
       <div class="row">
         <div class="col" style="margin: 5px">
           <div class="card text-center col" style="width: 18rem">
-            <img src="headshot.jpg" class="card-img-top photoFrame" alt="#" />
+            <img src="img/headshot.jpg" class="card-img-top photoFrame" alt="#" />
             <div class="card-body">
               <h5 class="card-title">Headshots</h5>
               <p class="card-text">View Headshots</p>
@@ -81,7 +81,7 @@
         </div>
         <div class="col" style="margin: 5px">
           <div class="card text-center col" style="width: 18rem">
-            <img src="portrait.jpeg" class="card-img-top photoFrame" alt="#" />
+            <img src="img/portrait.jpeg" class="card-img-top photoFrame" alt="#" />
             <div class="card-body">
               <h5 class="card-title">Portrait</h5>
               <p class="card-text">View Portraits</p>
@@ -91,7 +91,7 @@
         </div>
         <div class="col" style="margin: 5px">
           <div class="card text-center col" style="width: 18rem">
-            <img src="prom.jpg" class="card-img-top photoFrame" alt="#" />
+            <img src="img/prom.jpg" class="card-img-top photoFrame" alt="#" />
             <div class="card-body">
               <h5 class="card-title">Prom</h5>
               <p class="card-text">Input text here</p>
@@ -103,7 +103,7 @@
       <div class="row">
         <div class="col" style="margin: 5px">
           <div class="card text-center col" style="width: 18rem">
-            <img src="senior.jpeg" class="card-img-top photoFrame" alt="#" />
+            <img src="img/senior.jpeg" class="card-img-top photoFrame" alt="#" />
             <div class="card-body">
               <h5 class="card-title">Senior</h5>
               <p class="card-text">Input text here</p>
@@ -113,7 +113,7 @@
         </div>
         <div class="col" style="margin: 5px">
           <div class="card text-center col" style="width: 18rem">
-            <img src="family.jpeg" class="card-img-top photoFrame" alt="#" />
+            <img src="img/family.jpeg" class="card-img-top photoFrame" alt="#" />
             <div class="card-body">
               <h5 class="card-title">Family</h5>
               <p class="card-text">Input text here</p>
@@ -123,7 +123,7 @@
         </div>
         <div class="col" style="margin: 5px">
           <div class="card text-center col" style="width: 18rem">
-            <img src="event.jpg" class="card-img-top photoFrame" alt="#" />
+            <img src="img/event.jpg" class="card-img-top photoFrame" alt="#" />
             <div class="card-body">
               <h5 class="card-title">Event</h5>
               <p class="card-text">View Event</p>
