changed card titles in about section

--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <header class="header">
+    <header class="header text-center">
       <img src="img/ufxlogo.png" height="100px" style="border: solid 1px" />
       <h1>UrbanFX Photography</h1>
       <button type="button" class="btn btn-success">Book Now</button>
@@ -41,7 +41,7 @@
       <h2>About UrbanFX Photography</h2>
     </div>
     <br /><br /><br /><br /><br />
-    <div class="text-center row">
+    <div class="text-center row" style="width:100%">
       <div class="col">
         <img src="img/photographer.jpg" height="250px" class="photoFrame" />
       </div>
@@ -103,7 +103,7 @@
         href="#"
         class="list-group-item list-group-item-action"
         style="background-color: gold"
-        >Children</a
+        >Family</a
       >
       <a
         href="#"
