--- a/gallery.html
+++ b/gallery.html
@@ -13,8 +13,8 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <header class="header">
-      <img src="ufxlogo.png" height="100px" style="border: solid 1px" />
+    <header class="header text-center">
+      <img src="img/ufxlogo.png" height="100px" style="border: solid 1px" />
       <h1>UrbanFX Photography</h1>
       <button type="button" class="btn btn-success">Book Now</button>
     </header>
