--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <header class="header">
+    <header class="header text-center">
       <img src="img/ufxlogo.png" height="100px" style="border: solid 1px" />
       <h1>UrbanFX Photography</h1>
       <button type="button" class="btn btn-success">Book Now</button>
@@ -46,6 +46,7 @@
         source
         src="ufx.mov"
         type="video/mp4"
+
       ></video>
     </div>
     <div class="text-center">
