--- a/gallery.html
+++ b/gallery.html
@@ -37,6 +37,69 @@
         </a>
       </form>
     </nav>
+    <div class="text-center">
+      <h2>
+        Gallery
+      </h2>
+    </div>
+    <div class="container">
+      <div class="row">
+        <div class="col">
+          <img src="img/headshot1.jpg" alt="headshot photo">
+        </div>
+        <div class="col">
+          <img src="img/headshot2.jpg" alt="headshot photo">
+        </div>
+        <div class="col">
+          <img src="img/headshot3.jpg" alt="headshot photo">
+        </div>
+        <div class="col">
+          <img src="img/portrait1.jpeg" alt="headshot photo">
+        </div>
+        <div class="col">
+          <img src="img/portrait2.jpg" alt="headshot photo">
+        </div>
+        <div class="col">
+          <img src="img/portrait3.jpeg" alt="headshot photo">
+        </div>
+        <div class="col">
+          <img src="img/prom1.jpg" alt="headshot photo">
+        </div>
+        <div class="col">
+          <img src="img/prom2.jpg" alt="headshot photo">
+        </div>
+        <div class="col">
+          <img src="img/prom3.jpg" alt="headshot photo">
+        </div>
+        <div class="col">
+          <img src="img/senior1.jpg" alt="headshot photo">
+        </div>
+        <div class="col">
+          <img src="img/senior2.jpg" alt="headshot photo">
+        </div>
+        <div class="col">
+          <img src="img/senior3.jpg" alt="headshot photo">
+        </div>
+        <div class="col">
+          <img src="img/family1.jpg" alt="headshot photo">
+        </div>
+        <div class="col">
+          <img src="img/family2.jpeg" alt="headshot photo">
+        </div>
+        <div class="col">
+          <img src="img/family3.jpg" alt="headshot photo">
+        </div>
+        <div class="col">
+          <img src="img/branding1.jpeg" alt="headshot photo">
+        </div>
+        <div class="col">
+          <img src="img/branding2.jpeg" alt="headshot photo">
+        </div>
+        <div class="col">
+          <img src="img/branding3.jpeg" alt="headshot photo">
+        </div>
+      </div>
+    </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
