added function with return value

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
             Contact
           </button>
         </a>
+        <button type="button" class="btn btn-warning" id="galleryButton">Gallery Login</button>
       </form>
     </nav>
     <div class="video-container" style="border: groove grey 20px">
