--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         <div class="col" style="margin: 5px">
           <div class="card text-center col" style="width: 22rem">
             <img
-              src="img/headshot.jpg"
+              src="Img/headshot.jpg"
               class="card-img-top photoFrame"
               alt="#"
             />
