--- a/about.html
+++ b/about.html
@@ -45,7 +45,7 @@
     <div class="container text-center">
     <div class="row">
       <div class="col">
-        <img src="Img/photographer.jpg" height="250px" class="photoFrame" />
+        <img src="Img/Photographer.jpg" height="250px" class="photoFrame" />
         <p>Alexander Hamilton II</p>
       </div>
       <div class="col">
